2004-02-07  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* autogen.sh: Executes aclocal first, this fixes a lot of warnings and
	build errors.

2004-02-06  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/CanvasBox.custom: Obj is now created using the GObject hirarchy,
	  Fixes the default ctor.
	* dia/CanvasImage.custom: Ditto
	* dia/CanvasLine.custom: Ditto
	* dia/CanvasText.custom: Ditto
	* dia/CanvasItem.custom: No need for item create method
	* PROBLEMS: Clarify one of the problems

2004-02-05  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/makefile.am: Removed -nowarn:0660,0661, cause they are not
	  generated anymore

2004-01-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* PROBLEMS: Removed problem with array fields not generated
	properly, they are now generated properly in latest gtk# cvs.

2004-01-06  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/diacanvas-api.xml: Regenerated with gtk#-0.15
	* dia/CanvasItem.custom: Updated to use GLib.GType
	* dia/PlacementTool.cs: Ditto
	* sample/CanvasTextBox.cs: Ditto
	* configure.in: Checks for gtk#-0.15 and 
	  bumped the diacanvas# version to 0.4.0

2003-12-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sample/CanvasTextBox.cs: Removed not needed using line
	* PROBLEMS: Added extra info on casting problem
	* sample/sample.cs: Added extra info on casting problem
	* configure.in: Updated dependency check
	* NEWS: Updated news for 0.3.0
	* Released 0.3.0

2003-12-03  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/Dia/CanvasLine.xml: Documented
	* doc/en/Dia/*.xml: Gettified all GType properties

2003-11-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sample/sample.cs: Check for ctrl modifier the proper way.
	* README: Removed reqs, they are detected by configure now.

2003-11-17  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/dia/CanvasEditable.xml: Documented
	* doc/en/dia/CanvasGroupable.xml: Documented
	* doc/diacanvas-docs.zip: Removed
	* doc/diacanvas-docs.tree: Ditto