@@ -1,5 +1,5 @@
 SUBDIRS=pixmaps glade
-EXTRA_DIST= sample.cs CanvasTextBox.cs
+EXTRA_DIST= *.cs
 
 ASSEMBLIES=	-r glib-sharp 			\
 		-r gtk-sharp			\
@@ -20,13 +20,10 @@ RESOURCES=	-resource:glade/gui.glade		\
 
 SAMPLE=		sample.exe
 
-CODE=		CanvasTextBox.cs	\
-		sample.cs
-
 all: $(SAMPLE)
 
-$(SAMPLE): $(CODE) ../dia/diacanvas-sharp.dll
-	mcs $(ASSEMBLIES) $(RESOURCES) $(CODE) -o $(SAMPLE)
+$(SAMPLE): *.cs ../dia/diacanvas-sharp.dll
+	mcs $(ASSEMBLIES) $(RESOURCES) *.cs -o $(SAMPLE)
 
 clean:
 	rm -f $(SAMPLE)
